fix tabs witdh on mobile

--- a/src/pages/TISC/Adminstration/Documentation/HowTo/index.less
+++ b/src/pages/TISC/Adminstration/Documentation/HowTo/index.less
@@ -17,7 +17,8 @@
 
   :global(.ant-tabs-tab) {
     width: 125px;
-    @media screen and (max-width: 400px) {
+
+    @media screen and (max-width: 576px) {
       flex: 1;
       width: auto;
     }
